welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
maxValue:4: error: not found: value test0
    if (nums(l)>test0){
                ^